# indiv_proj2_yx248

./: .env  Cargo.toml  Makefile  README.md  dataset_sample.csv  env.example  requirements.txt  ver_rs_mem.txt
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yml
indiv_proj2/: config.rs  lib.rs  main.rs
tests/: test_main.rs
